# mlflow-practice

./: .coverage  .gitignore  .gitkeep  Dockerfile.mlflow_server  README.md  dockerfile  dockerfile.txt  env.yml  nonstandardcode.py  pyproject.toml  requirements.txt  setttings.json  setup.cfg  train.py
.github/workflows/: hello.yml  tests.yml
artifacts/: dtmodel.pkl  linearmodel.pkl
data/processed/: housing_testdata.csv
deploy/conda/: env.yml
docs/: conf.py
docs/_build/html/: objects.inv  search.html
mlhousing/: .coverage  .gitignore  LICENCE  README.md  __init__.py  requirements.txt  setup.cfg
mlhousing/.github/workflows/: hello.yml  tests.yml
mlhousing/artifacts/: dtmodel.pkl
mlhousing/data/processed/: housing_testdata.csv  housing_testlabel.csv  housing_train.csv
mlhousing/docs/: index.rst
mlhousing/docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree
mlhousing/src/mlhousing/: process.py
mlhousing/src/mlhousing.egg-info/: PKG-INFO  top_level.txt
mlhousing/tests/: conftest.py
mlhousing/tests/unit_tests/: conftest.py  test_data_processing.py  test_score.py  test_train.py
notebooks/: mlhousing.ipynb
scripts/: process.py
src/mlhousing/: __init__py  ingest_data.py  preprocess.py  process.py  score.py  train.py
src/mlhousing.egg-info/: PKG-INFO  SOURCES.txt
src/mlhousing/training/: train.py
tests/: conftest.py
tests/installation_tests/: test_installation.py
tests/integration_tests/: test_train.py
tests/unit_tests/: test_data_processing.py  test_score.py
vscode-refactor/: README.md  nonstandardcode.py
(+9 files in other folders)
