[metadata]
name = mlhousing
version = 1.0
author = sanket
author_email = sanket.patel@tigeranalytics.com
description = A small example package for mlhousing prediction
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sanket-307/mle-training/tree/enh/10/complete-refactor/mlhousing
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

# [options]
# packages =
#     mlhousing
# package_dir =
#     =src
# zip_safe = no

[tool.isort]
profile = 'black'

[flake8]
max-line-length = 120
extend-ignore = E203

[settings]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 120


